# webview-vala

./: LICENSE  README.md  browser.vala  main.vala  meson.build
msys/: mingw-w64-ucrt-x86_64-webview-1.0.0-1-any.pkg.tar.zst
vapi/: webview.vapi  windows.vapi
